Fix grid view layout/design
- Restore tx-dlf-pagegrid-pagination class so that thumbnail page number
  looks like before.
- Add padding to prevent bottom thumbnails from being partly hidden by
  paginator widget.

--- a/Resources/Private/Less/modules/gridview.less
+++ b/Resources/Private/Less/modules/gridview.less
@@ -16,6 +16,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    padding-bottom: 80px; // Headroom for f3-widget-paginator
     overflow: hidden;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
@@ -35,6 +36,12 @@
             height: 100%;
             width: 100%;
             object-fit: contain;
+        }
+        .tx-dlf-pagegrid-pagination {
+            margin-top: 5px;
+            font-weight: 700;
+            font-size: 12px;
+            color: @light-blue;
         }
     }
     @media screen and (min-width: @tabletViewportWidth) {
